# file-sorter

./: Cargo.toml
src/: app.rs  cli.rs  main.rs  utils.rs
