[package]
name = "image-sorter"
version = "0.1.0"
authors = [ "Nathaniel Ledford <nate@nateledford.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
thiserror = "1.0.20"
walkdir = "2.3.1"
chrono = "0.4.15"
