[package]
name = "file-sorter"
version = "0.1.1"
authors = [ "Nathaniel Ledford <nate@nateledford.com>" ]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
rand = "0.7.3"
thiserror = "1.0.20"
uuid = { version = "0.8.1", features = [ "v4" ] }
walkdir = "2.3.1"
